k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: itsm-service-flow
  labels:
    app.kubernetes.io/name: itsm-service-flow
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: itsm-service-flow
  ports:
    - name: http
      port: 80
      targetPort: http
